TS-413: latest revision of the fix for large buffers fed to the cache

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@992457 13f79535-47bb-0310-9956-ffa450edef68